<resources>
    <string name="app_name">Worder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_player">Player</string>
    <string name="k1">Dictionary</string>
    <string name="k2">Сheck</string>
    <string name="k3">Texts</string>
    <string name="m1">Add a new word</string>
    <string name="m2">Show the entire dictionary</string>
    <string name="m3">Find the word</string>
    <string name="m4">Delete a word</string>
    <string name="m5">Replace the word</string>
    <string name="pr1">Add Text</string>
    <string name="pr2">Translation</string>
    <string name="pr3">Reverse transfer</string>
    <string name="pr4">Text translation</string>
    <string name="pr5">Repeat transfer</string>
    <string name="pd1">Fill in both fields</string>
    <string name="tx1">Word:</string>
    <string name="tx2">A word in English</string>
    <string name="tx3">Translation:</string>
    <string name="tx4">The word in Russian</string>
    <string name="tx5">Add</string>
    <string name="tx6">+New Theme</string>
    <string name="tx7">Enter the word you want to replace</string>
    <string name="tx8">Replace</string>
    <string name="tx9">Enter the word you want to delete</string>
    <string name="tx10">Delete</string>
    <string name="tx11">The theme is not selected</string>
    <string name="tx12">Search</string>
    <string name="tx13">Your transfer</string>
    <string name="tx14">Exit</string>
    <string name="tx15">New texts</string>
    <string name="tx16">Completed texts</string>
    <string name="tx17">Text translation</string>
    <string name="tx18">Text field</string>
    <string name="tx19">The text is in English</string>
    <string name="tx20">Text in Russian</string>
    <string name="tx21">Text search</string>
    <string name="tx22">The transfer field</string>
    <string name="tx23">Check</string>
    <string name="tx24">Settings</string>
    <string name="tx25">Translate</string>
    <string name="tx26">Enter the transfer here</string>
    <string name="tx27">Language</string>
    <string name="tx28">Icon Selection</string>
    <string name="λ" translatable="false">λ</string>
    <string name="tx29">Choosing a theme</string>
    <string name="tx30">Cansel</string>
    <string name="tx31">Ok</string>
    <string name="tx32">Enter a subject:</string>
    <string name="tx33">Enter a topic name</string>
    <string name="tx34">There is already such a topic</string>
    <string name="tx35">Yes</string>
    <string name="tx36">Do you really want to delete?</string>
    <string name="tx37">Replace</string>
    <string name="tx38">Something needs to be replaced</string>
    <string name="tx39">The word and translation fields must be filled in</string>
    <string name="tx40">Results</string>
    <string name="tx41">Close</string>
    <string name="tx42">Correct answers:</string>
    <string name="tx43">Incorrect answers:</string>
    <string name="tx44">You can\'t put an empty theme</string>
    <string name="tx45">There is already such a topic</string>
    <string name="tx46">Deleting a topic</string>
    <string name="tx47">When a topic is deleted, all words in that topic are also deleted.</string>
    <string name="tx48">Are you sure you want to delete it?</string>
    <string name="tx49">The topic has been deleted</string>
    <string name="tx50">Change any field</string>
    <string name="tx51">Fields cannot be empty</string>
    <string name="tx52">The replacement was successful</string>
    <string name="tx53">Deleting Text</string>
    <string name="tx54">Do you really want to delete this text?</string>
    <string name="tx55">The text has been deleted</string>
    <string name="tx56">Text</string>
    <string name="tx57">Lets go</string>
    <string name="tx58">Enter the name of the text</string>
    <string name="tx59">The name cannot be empty</string>
    <string name="tx60">There is already such a topic, please name the text differently</string>
    <string name="tx61">Text added</string>
    <string name="tx62">You have selected the text</string>
    <string name="tx63">Adding a theme</string>
    <string name="tx64">Selected</string>
    <string name="tx65">Enter the transfer</string>
    <string name="tx66">Top of the best</string>
    <string name="error1" translatable="false">00.00.0000</string>
    <string name="tx67">Your best attempts will be here</string>
    <string name="tx68">Achievements</string>
    <string name="tx69">Results table</string>
    <string name="ach_1">First word</string>
    <string name="desc_1">Add your first word yourself</string>
    <string name="ach_2">50 words</string>
    <string name="desc_2">Add 50 words to your dictionary</string>
    <string name="ach_3">100 words</string>
    <string name="desc_3">Add 100 words to your dictionary</string>
    <string name="ach_4">500 words</string>
    <string name="desc_4">Add 500 words to your dictionary</string>
    <string name="ach_5">First text</string>
    <string name="desc_5">Add your first text yourself</string>
    <string name="ach_6">10 texts</string>
    <string name="desc_6">Add 10 texts</string>
    <string name="ach_7">100 texts</string>
    <string name="desc_7">Add 100 texts</string>
    <string name="ach_8">Tolstoy</string>
    <string name="desc_8">Write a text of 1500 characters or more</string>
    <string name="ach_9">Perfect</string>
    <string name="desc_9">Get 10 correct answers in a row in game mode</string>
    <string name="ach_10">Subjects</string>
    <string name="desc_10">Add 25 themes</string>
    <string name="ach_11">Professional</string>
    <string name="desc_11">Write down 100 words in one topic.</string>
    <string name="ach_12">Worder-regime</string>
    <string name="desc_12">You\'ve entered worder mode</string>
    <string name="ach_13">Super lose</string>
    <string name="desc_13">Lose with a score of 0/10 or worse</string>
    <string name="ach_14">Night game</string>
    <string name="desc_14">Play the game from 23.00 to 6.00</string>
    <string name="ach_15">Good game</string>
    <string name="desc_15">Win perfectly with a score of 10/10 or better</string>
    <string name="ach_16">All achievements</string>
    <string name="desc_16">Collect all the achievements</string>
    <string name="tx70">New achievement!</string>
    <string name="tx71">Sound</string>
    <string name="tx72">On</string>
    <string name="tx73">Off</string>
    <string name="tx74">Worder is an app for learning English. Here, you can build your personal vocabulary by adding new words and texts, and then test how well you have memorized them. Below is a description of how to use each section of the app.</string>
    <string name="tx75">About app</string>
    <string name="tx76">The \"Dictionary\" section stores all your words, organized by topic. To add a new word, click the \"Add\" button, enter the word and its translation, then select the relevant topic or create a new one right in that window. You can search the word list using the search bar at the top, as well as edit or delete individual words by clicking the corresponding icons next to them. To manage the topics themselves (renaming or deleting), use the topic editing button; you can also add a new topic there without associating it with a specific word.</string>
    <string name="tx77">The \"Test\" section allows you to check how well you have memorized the words from the vocabulary list. First, select one or more topics you wish to be tested on by checking the corresponding boxes in the list. Then, choose the translation direction—Russian to English or vice versa—and click \"Start.\" You will be shown a word and asked to enter its translation; the app will indicate whether each answer is correct and, at the end of the test, display your final score—the number of correct answers out of the total number of questions.</string>
    <string name="tx78">In the \"Texts\" section, you can add short English texts along with their translations to practice reading and translating. To add a new text, click \"Add,\" enter the English text and its Russian translation, and assign it a short title. To practice with a text you have already added, locate it by title in the list and open it; you will see the text and a field for entering your own translation. You can compare your version with the correct translation by clicking the check button.</string>
    <string name="tx79">The “Achievements” section shows your table of the best knowledge test results — this includes the 15 highest scores you have ever achieved. Achievements are also displayed here — awards for special successes in learning English. Some of them are hidden and will only become available if a special condition is met. A little tip: if you’ve ever had to access developer mode on your phone, try applying a similar trick somewhere on the app’s main screen. There are also rewards for those who are not lucky enough to guess the translation once, and for those who do the verification flawlessly. The app also knows how to spot the most diligent midnighters.</string>
    <string name="tx80">In the “Settings” section, you can personalize the app to suit your needs. Here, you can choose one of three design color themes, change the interface language (Russian or English), and select the app icon that will be displayed on your phone’s home screen. You can also enable or disable the app’s sound and choose how many of the best knowledge test results (5, 10, or 15) should be displayed in the results table in the “Achievements” section.</string>
</resources>