<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".settings.Question">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx75"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx74"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10sp"
            android:layout_marginStart="6sp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k1"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx76"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10sp"
            android:layout_marginStart="6sp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k2"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx77"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10sp"
            android:layout_marginStart="6sp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k3"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx78"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10sp"
            android:layout_marginStart="6sp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx68"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx79"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10sp"
            android:layout_marginStart="6sp"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx24"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx80"
            android:textColor="?android:textColor"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10sp"
            android:layout_marginStart="6sp"
            android:textSize="20sp" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>