<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".dictionary.Add">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/tx18"
        android:textColor="?android:textColor"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/goHomeText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/wordeaa"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_view_bd"
        android:gravity="start"
        android:lineSpacingMultiplier="1.4"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/tx19"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/te2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintWidth_default="percent"/>

    <EditText
        android:id="@+id/prvv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/search_view_bd"
        android:gravity="start"
        android:hint="@string/tx20"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/te2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintWidth_default="percent"/>


    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/te1"
        android:fontFamily="sans-serif-medium"
        android:onClick="add_text"
        android:text="@string/tx5"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prvv"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75" />

    <ImageButton
        android:id="@+id/goHomeText"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:onClick="Sl2"
        android:backgroundTint="?attr/colorOnPrimary"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_round_button"
        android:src="@drawable/ic_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goBackText"/>

    <ImageButton
        android:id="@+id/goBackText"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:onClick="Sl1"
        android:background="@drawable/bg_round_button"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/tx17"
        android:textColor="?android:textColor"
        android:textSize="45sp"
        app:layout_constraintTop_toBottomOf="@+id/wordeaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>