<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".check.Play"
    android:background="?attr/colorPrimary">

    <ImageButton
        android:id="@+id/bbb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_round_button"
        android:src="@drawable/ic_back"
        android:onClick="Go_back"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageViewgb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="Go_home"
        android:background="@drawable/bg_round_button"
        android:src="@drawable/ic_home"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/bbb"
        app:layout_constraintTop_toTopOf="@id/bbb"
        app:layout_constraintBottom_toBottomOf="@id/bbb" />


    <TextView
        android:id="@+id/iii"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="270dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/tx1"
        android:textColor="?android:textColor"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/iii2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:maxLines="3"
        android:textColor="?android:textColor"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/iii"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/iii3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/tx25"
        android:textColor="?android:textColor"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iii2" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:ems="15"
        android:inputType="text"
        android:hint="@string/tx26"
        android:textColorHint="@color/te2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iii3"
        app:layout_constraintWidth_percent="0.67" />

    <TextView
        android:id="@+id/iii4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textColor="?android:textColor"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/editTextText"
        app:layout_constraintTop_toBottomOf="@id/iii3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/iii5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:maxLines="3"
        android:textColor="?android:textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:textSize="20sp"
        android:text="@string/tx23"
        android:backgroundTint="?attr/colorOnPrimary"
        android:textColor="?android:textColor"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iii5" />

</androidx.constraintlayout.widget.ConstraintLayout>